package ca.mcmaster.se2aa4.mazerunner.maze;

public enum MazeElement {
    SPACE, WALL;
}
