package ca.mcmaster.se2aa4.mazerunner.services;

public interface MazeService {
    String run();
}
